Fixed several layout issues

--- a/src/main/webapp/resources/css/layout.css
+++ b/src/main/webapp/resources/css/layout.css
@@ -1,7 +1,13 @@
+.layout-inner-north {
+    color: #000000;
+    background-color: #FFFFFF;
+    border: none;
+}
+
 #headerForm .logo {
     position: relative;
-    top: 0;
-    left: 8px;
+    bottom: 4px;
+    left: 6px;
     float: left;
 }
 
@@ -44,7 +50,7 @@
 .docuEventCaption {
     vertical-align: middle;
     text-align: center;
-    height: 20px;    
+    height: 20px;
     margin-top: 8px;
     margin-bottom: 1px;
 }
@@ -81,8 +87,8 @@ div.source {
     text-align: right;
     float: right;
     margin-right: 10px;
-    margin-top: -9px;
-    *margin-top: -40px; /* shows in IE7 and below */
+    margin-top: -12px;
+    *margin-top: -43px; /* shows in IE7 and below */
 }
 
 .smallNav td {
